--- a/hardhat-html-fund-me/index.html
+++ b/hardhat-html-fund-me/index.html
@@ -7,8 +7,10 @@
 
 <body>
   Hello!
-  <script src="./index.js" type="text/javascript"></script>
-  <button id="connectButton" onclick="connect()">Connect</button>
+  <!-- <script src="./index.js" type="text/javascript"></script> -->
+  <script src="./index.js" type="module"></script>
+  <button id="connectButton">Connect</button>
+  <button id="fundButton">Fund</button>
 </body>
 
 </html>
