--- a/hardhat-html-fund-me/index.html
+++ b/hardhat-html-fund-me/index.html
@@ -6,11 +6,17 @@
 </head>
 
 <body>
-  Hello!
+  Fund Me App
   <!-- <script src="./index.js" type="text/javascript"></script> -->
   <script src="./index.js" type="module"></script>
   <button id="connectButton">Connect</button>
+  <button id="balanceButton">getBalance</button>
+  <button id="withdrawButton">Withdraw</button>
+  <!-- form -->
+  <label for="fund">ETH Amount</label>
+  <input id="ethAmount" placeholder="0.1" />
   <button id="fundButton">Fund</button>
+  <!-- form -->
 </body>
 
 </html>
